[package]
name = "strap-rs"
version = "0.1.0"
edition = "2021"
authors = ["Walker Thornley"] 
description = "A Rust implementation of the Secure TRansfer of Association Protocol"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7"
rand = "0.8"
block-modes = "0.8"
hmac = "0.12"
sha2 = "0.10.1"